--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 plugins {
-    id 'fabric-loom' version '1.1-SNAPSHOT'
-    id 'maven-publish'
+    id 'fabric-loom' version '1.2-SNAPSHOT'
 }
 
 version = project.mod_version
 group = project.maven_group
+
+base {
+    archivesName = project.archives_base_name
+}
+
+repositories {
+    // To use SML, you need to add the FelNullMaven repository
+    maven {
+        name = "FelNull Maven"
+        url = "https://maven.felnull.dev"
+    }
+}
 
 sourceSets {
     main {
@@ -17,6 +28,15 @@ sourceSets {
 }
 
 loom {
+    splitEnvironmentSourceSets()
+
+    mods {
+        "sml-example-mod" {
+            sourceSet sourceSets.main
+            sourceSet sourceSets.client
+        }
+    }
+
     runs {
         datagen {
             server()
@@ -31,42 +51,18 @@ loom {
 }
 assemble.dependsOn runDatagen
 
-repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because
-    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-    // for more information about repositories.
-
-    maven {
-        name = "FelNull Maven"
-        url = "https://maven.felnull.dev"
-    }
-}
-
 dependencies {
-    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    /*mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"*/
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modApi "dev.felnull:special-model-loader:1.1.0"
+    // Using the SML API
+    modApi "dev.felnull:special-model-loader:1.2.0"
 
-    //↓ Required for inclusion in jar in jar
-    include "dev.felnull:special-model-loader:1.0.0"
-
-    // Uncomment the following line to enable the deprecated Fabric API modules.
-    // These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
-
-    // modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
-}
-
-base {
-    archivesName = project.archives_base_name
+    // Required for inclusion in jar in jar
+    include "dev.felnull:special-model-loader:1.2.0"
 }
 
 processResources {
@@ -78,14 +74,10 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
     it.options.release = 17
 }
 
 java {
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
     withSourcesJar()
 
     sourceCompatibility = JavaVersion.VERSION_17
@@ -94,23 +86,6 @@ java {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${base.archivesName.get()}" }
-    }
-}
-
-// configure the maven publication
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
+        rename { "${it}_${project.archivesBaseName}" }
     }
 }
