--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.17
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+mod_version=1.0.0
+maven_group=com.example
+archives_base_name = sml-example-mod
 
 # Dependencies
-	fabric_version=0.75.3+1.19.4
+fabric_version=0.83.0+1.20
