--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'fabric-loom' version '1.2-SNAPSHOT'
+    id 'fabric-loom' version '1.7-SNAPSHOT'
+    id 'maven-publish'
 }
 
 version = project.mod_version
@@ -10,7 +11,7 @@ base {
 }
 
 repositories {
-    // To use SML, you need to add the FelNullMaven repository
+    maven { url "https://maven.parchmentmc.org" }
     maven {
         name = "FelNull Maven"
         url = "https://maven.felnull.dev"
@@ -31,7 +32,7 @@ loom {
     splitEnvironmentSourceSets()
 
     mods {
-        "sml-example-mod" {
+        "modid" {
             sourceSet sourceSets.main
             sourceSet sourceSets.client
         }
@@ -52,17 +53,23 @@ loom {
 assemble.dependsOn runDatagen
 
 dependencies {
+    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings loom.officialMojangMappings()
+
+    mappings loom.layered() {
+        officialMojangMappings()
+        parchment("org.parchmentmc.data:parchment-1.21:2024.06.23@zip")
+    }
+
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+    // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // Using the SML API
-    modApi "dev.felnull:special-model-loader:1.2.0"
+    modApi "dev.felnull:special-model-loader:1.3.0"
 
-    // Required for inclusion in jar in jar
-    include "dev.felnull:special-model-loader:1.2.0"
+    //Required if you want this mod to be embedded by jar-in-jar
+    include "dev.felnull:special-model-loader:1.3.0"
 }
 
 processResources {
@@ -74,18 +81,39 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.release = 17
+    it.options.release = 21
 }
 
 java {
+    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+    // if it is present.
+    // If you remove this line, sources will not be generated.
     withSourcesJar()
 
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
+        rename { "${it}_${project.base.archivesName.get()}" }
+    }
+}
+
+// configure the maven publication
+publishing {
+    publications {
+        create("mavenJava", MavenPublication) {
+            artifactId = project.archives_base_name
+            from components.java
+        }
+    }
+
+    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+    repositories {
+        // Add repositories to publish to here.
+        // Notice: This block does NOT have the same function as the block in the top level.
+        // The repositories here will be used for publishing your artifact, not for
+        // retrieving dependencies.
     }
 }
