--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
-loader_version=0.14.21
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.16.2
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name = sml-example-mod
+maven_group=dev.felnull
+archives_base_name=sml-example-mod
 
 # Dependencies
-fabric_version=0.83.0+1.20
+fabric_version=0.102.1+1.21.1
